<resources>
    <string name="app_name">RFTProject</string>
    <string name="youremail">Enter your email</string>
    <string name="yourusername">Enter your username</string>
    <string name="yourpassword">Enter your password</string>
    <string name="forgotemail">I forgot my email adress</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.user_name</string>
    <string name="registration">Registration</string>
    <string name="globalhigscores">Global Ranklist</string>
    <string name="personalhigscores">Personal Ranklist</string>
    <string name="newpassword">New password</string>
    <string name="newpasswordconfirm">Confirm new password</string>
    <string name="newemail">New email</string>
    <string name="newemailconfirm">Confirm new email</string>
    <string name="changeemail">Change email</string>
    <string name="changepassword">Change password</string>
    <string name="quizgame">Quiz game</string>
    <string name="startgame">Start</string>
    <string name="next">Next</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
</resources>
