<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homefragment"
    android:background="@drawable/bggradient">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline6"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline6"
        app:layout_constraintGuide_percent="1"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline6"
        app:layout_constraintGuide_percent="0.68"
        android:orientation="horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline6"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline6"
        app:layout_constraintRight_toRightOf="@+id/right_guideline6"
        app:layout_constraintTop_toTopOf="@+id/top_guideline6" >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/difficultygroup"
            android:orientation="horizontal"
            android:checkedButton="1">
            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/easy"
                    android:textSize="18dp"
                    android:fontFamily="fantasy"
                    android:layout_weight="1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/medium"
                    android:textSize="18dp"
                    android:fontFamily="fantasy"
                    android:layout_weight="1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hard"
                    android:textSize="18dp"
                    android:fontFamily="fantasy"
                    android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline0"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline0"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline0"
        app:layout_constraintGuide_percent="0"
        android:orientation="horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizgame"
        android:textSize="40dp"
        android:fontFamily="fantasy"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline0"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline0"
        app:layout_constraintRight_toRightOf="@+id/right_guideline0"
        app:layout_constraintTop_toTopOf="@+id/top_guideline0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline1"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline1"
        app:layout_constraintGuide_percent="1"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline1"
        app:layout_constraintGuide_percent="0.8"
        android:orientation="horizontal"/>
    <Button
        android:id="@+id/startbutton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/startgame"
        android:textSize="20dp"
        android:background="@drawable/buttoncorner"
        android:fontFamily="fantasy"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline1"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline1"
        app:layout_constraintRight_toRightOf="@+id/right_guideline1"
        app:layout_constraintTop_toTopOf="@+id/top_guideline1" />


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline2"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline2"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline2"
        app:layout_constraintGuide_percent="0"
        android:orientation="horizontal"/>
    <LinearLayout
        android:id="@+id/gamelayout"
        android:layout_width="350dp"
        android:layout_height="430dp"
        android:text="@string/startgame"
        android:textSize="20dp"
        android:orientation="vertical"
        android:background="@drawable/gamebgcornered"
        android:fontFamily="fantasy"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline2"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline2"
        app:layout_constraintRight_toRightOf="@+id/right_guideline2"
        app:layout_constraintTop_toTopOf="@+id/top_guideline2" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/lifeimage"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/life3"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/leveltext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="1/10"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:fontFamily="fantasy"
                android:textSize="12dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/difficultytext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:fontFamily="fantasy"
                android:gravity="center"
                android:text="medium"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/question"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="What is your best anime?"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:fontFamily="fantasy"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answergroup"
            android:checkedButton="1">
                <RadioButton
                    android:id="@+id/answer1"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:text="sadasdasasdadasdasdsa"
                    android:fontFamily="fantasy"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"/>
                <RadioButton
                    android:id="@+id/answer2"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:text="Kuro no basuke"
                    android:fontFamily="fantasy"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"/>
                <RadioButton
                    android:id="@+id/answer3"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:text="sadasdasasdadasdasdsa"
                    android:fontFamily="fantasy"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"/>
                <RadioButton
                    android:id="@+id/answer4"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:text="sadasdasasdadasdasdsa"
                    android:fontFamily="fantasy"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"/>
        </RadioGroup>
        <Button
            android:id="@+id/nextbutton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/buttoncorner"
            android:text="@string/next"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>